# DUBFORGE

./: .dubforge_memory  .gitignore  AUDIT.md  AUDIT_APOLOGY.md  AUDIT_COMPREHENSIVE_2025.md  AUDIT_DOJO_INTEGRATION_ROADMAP.md  AUDIT_DRUMS_128RACK.md  AUDIT_FEATURE_INTEGRATION_2025.md  CONTEXT.md  DOCTRINE.md  DOJO_REORGANIZATION_PLAN.md  Makefile  README.md  _analyze_acapella.py  _analyze_acapella2.py  _check_dup_ids.py  _check_ids.py  _check_pointee.py  _check_pointee2.py  _check_tmpl_details.py  _deep_als_audit.py  _deep_als_diag.py  _default_als_structure.txt  _extract_default_als.py  _extract_edge_cookies.ps1  _find_dup_ids.py  _find_tempo.py  _inspect_als2.py  _inspect_demo.py  _sc_whoami.py  _stem_render.py  _v.txt  _v9_fast_init.py  _v9_full_import_test.py  _v9_stem_health_check.py  _v9_stem_master.py  _v9_stem_mix.py  _v9_stem_postprocess.py  _v9_stem_render.py  _v9_test_imports.py  (+50 more)
.github/workflows/: ci.yml
.ncl/state/: last_commit.txt
archive/debug_scripts/: _als_debug.xml  _als_dump.xml  _check_template_structure.py  _compare_tracks.py  _extract_cookies.py  _inspect_als.py  _inspect_plugin_db.py  _inspect_template.py  _regen_als.py  _run_output.txt  _save_mem.py  _test_run.txt  _test_stdout.txt  _theme_run.py  _verify_als.py  add_manual_auto.py  auto_crash_test.py  bisect2.py  bisect3.py  bisect_crash.py  check_automation.py  check_ids2.py  check_ids_v2.py  check_log.py  check_ordering.py  check_slot_counts.py  check_tmpl_returns.py  compare_auto_xml.py  compare_dc.py  compare_liveset.py  compare_mixers.py  compare_structure.py  compare_tracks_v2.py  compare_v4_v12.py  comparison_test.py  crash_test_v2.py  deep_clip_compare.py  deep_compare.py  deep_compare2.py  deep_compare3.py  (+45 more)
archive/old_versions/: dubforge_launchpad.py  dubforge_studio.py  make_apology_v1.py  (+11 more)
configs/: 150_insights_v6.md  apology_lyrics.md  base_template.yaml  crystal_theorem.yaml  fibonacci_blueprint_pack_v1.yaml  memory_v1.yaml  production_queue.yaml  rco_psbs_vip_delta_v1.1.yaml  sb_corpus_v1.yaml  serum2_module_pack_v1.yaml  track_cyclops_fury.yaml  track_fractal_descent.yaml  track_golden_membrane.yaml  track_tesseract_ritual.yaml  track_void_walker.yaml  void_protocol.yaml
engine/: __init__.py  ab_tester.py  ab_workflow.py  ableton_bridge.py  ableton_live.py  ableton_rack_builder.py  ableton_session.py  accel.py  accelerate_gpu.py  accelerate_vdsp.py  additive_synth.py  als_generator.py  als_generator_v6_backup.py  ambient_texture.py  arp_synth.py  arrangement_sequencer.py  artwork_generator.py  ascension.py  atmos_pipeline.py  audio_analyzer.py  audio_buffer.py  audio_math.py  audio_mmap.py  audio_preview.py  audio_splitter.py  audio_stitcher.py  audio_to_midi.py  auto_arranger.py  auto_master.py  auto_mixer.py  automation_recorder.py  autonomous.py  backup_system.py  bass_oneshot.py  batch_processor.py  batch_renderer.py  beat_repeat.py  beat_tracker.py  bounce.py  bus_router.py  (+190 more)
mwp/: CLAUDE.md  CONTEXT.md  PHASES.md
playbooks/: MWP_WORKFLOW.md  anti_drift.md  copilot_prompt_library.md
reports/: 150_INSIGHTS_DEEP_DIVE.md  AUDIT_P1_S1_PIPELINE.md  MIDI_ECOSYSTEM_RESEARCH_2025.md  SUBTRONICS_DEEP_DIVE.md  TURBOQUANT_APPLICATION_MAP.md  VOCAL_RESEARCH_2026.md  delta_plan_2026-03-16.json  delta_plan_2026-03-16.md  delta_plan_2026-03-17.json  delta_plan_2026-03-17.md
tests/: __init__.py  conftest.py  test_ab_tester.py  test_ableton_live.py  test_ableton_rack_builder.py  test_accelerate_gpu.py  test_accelerate_vdsp.py  test_additive_synth.py  test_als_generator.py  test_ambient_texture.py  test_arp_synth.py  test_arrangement_sequencer.py  test_ascension.py  test_audio_analyzer.py  test_audio_buffer.py  test_audio_math.py  test_audio_mmap.py  test_audio_preview.py  test_audio_splitter.py  test_audio_stitcher.py  test_auto_arranger.py  test_auto_master.py  test_auto_mixer.py  test_automation_recorder.py  test_backup_system.py  test_bass_oneshot.py  test_batch_processor.py  test_batch_renderer.py  test_beat_repeat.py  test_bounce.py  test_bus_router.py  test_chain_commands.py  test_chord_pad.py  test_chord_progression.py  test_cli.py  test_clip_launcher.py  test_clip_manager.py  test_collaboration.py  test_config_loader.py  test_convolution.py  (+141 more)
tools/: com.resonance.dubforge.nightly.plist  extract_vst3_state.py  forge_runner.py  gen_tests.py  make_state_template.py  nightly.sh
(+31 files in other folders)
