[project]
name = "dubforge"
version = "4.0.0"
description = "Planck x phi Fractal Basscraft Engine — Grandmaster Edition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DUBFORGE" }]
keywords = ["sound-design", "wavetable", "phi", "fibonacci", "dubstep", "bass", "production"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "mido>=1.3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
audio = ["soundfile>=0.12", "pyloudnorm>=0.1"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
dubforge = "run_all:main"
dubforge-cli = "engine.cli:main"
subphonics = "engine.subphonics_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.setuptools]
packages = ["engine"]
py-modules = ["run_all"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
