[project]
name = "dubforge"
version = "4.1.0"
description = "Planck x phi Fractal Basscraft Engine — Grandmaster Edition (Apple Silicon Optimized)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DUBFORGE" }]
keywords = ["sound-design", "wavetable", "phi", "fibonacci", "dubstep", "bass", "production"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy>=2.1",
    "pyyaml>=6.0.2",
    "mido>=1.3.3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.9"]
audio = ["soundfile>=0.12.1", "pyloudnorm>=0.1"]
ui = ["gradio>=5.0"]
full = [
    "dubforge[plot,audio,ui]",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
]

[project.scripts]
dubforge = "run_all:main"
dubforge-cli = "engine.cli:main"
subphonics = "engine.subphonics_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-x --tb=short --durations=10 --strict-markers"
markers = [
    "fast: structure / data-model / config tests (no DSP rendering)",
    "slow: DSP / audio-processing tests that render signals",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.setuptools]
packages = ["engine"]
py-modules = ["run_all"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
